# fashion-online

./: .env.example  .gitignore  fashion-online.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: main.py
backend/app/api/: schemas.py
backend/app/api/routes/: ai.py  auth.py  clothing.py  looks.py  users.py
backend/app/core/: config.py  security.py
backend/app/db/: adapter.py  memory_store.py  session.py
backend/app/models/: __init__.py  clothing.py  look.py  user.py
backend/app/repositories/: clothing_repo.py  look_repo.py  user_repo.py
backend/app/services/: ai_service.py  bg_service.py  clothing_service.py  look_service.py  storage_service.py  user_service.py  weather_service.py
frontend/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/outfit/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/wardrobe/: page.tsx
frontend/src/components/auth/: AuthProvider.tsx
frontend/src/components/layout/: MobileNav.tsx  SearchBar.tsx  TopBar.tsx
frontend/src/components/outfit/: DraggableClothing.tsx  OutfitCanvas.tsx
frontend/src/components/profile/: LookGrid.tsx  UserStats.tsx
frontend/src/components/shared/: ImageUploader.tsx  LoadingSpinner.tsx
frontend/src/components/wardrobe/: CategoryFilter.tsx  ClothingCard.tsx  ClothingGrid.tsx  EmptyWardrobe.tsx  UploadButton.tsx
frontend/src/lib/: api.ts  supabase.ts
frontend/src/stores/: authStore.ts  outfitStore.ts  uiStore.ts  wardrobeStore.ts
(+8 files in other folders)
