[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dramatiq[redis]>=2.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]
