[project]
name = "fashion-online-backend"
version = "0.1.0"
description = "Fashion Online — AI 数字衣柜平台后端"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "dramatiq[redis]>=2.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[project.scripts]
dev = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
